@@ -10,7 +10,7 @@ Line 1, characters 38-43:
                                           ^^^^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 |}];;
 
 let () = try () with Match_failure ("Any",_,_) -> ();;
@@ -20,7 +20,7 @@ Line 1, characters 35-46:
                                        ^^^^^^^^^^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 |}];;
 
 let () = try () with Match_failure (_,0,_) -> ();;
@@ -30,7 +30,7 @@ Line 1, characters 35-42:
                                        ^^^^^^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 |}];;
 
 type t =
@@ -55,7 +55,7 @@ Line 2, characters 7-17:
            ^^^^^^^^^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 
 val f : t -> unit = <fun>
 |}];;
@@ -69,7 +69,7 @@ Line 2, characters 8-10:
             ^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 
 val g : t -> unit = <fun>
 |}];;
@@ -97,7 +97,7 @@ Line 2, characters 7-34:
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Warning 52 [fragile-literal-pattern]: Code should not depend on the actual values of
 this constructor's arguments. They are only for information
-and may change in future versions. (See manual section 13.5)
+and may change in future versions. (see manual section 13.5.3)
 
 val j : t -> unit = <fun>
 |}];;
